// Grupo 20
// Tomás Barreto nº 56282
// João Matos nº 56292
// Diogo Pereira nº 56302

syntax = "proto3";
message message_t
 {
        enum Opcode {
                OP_BAD     	= 0;
                OP_SIZE    	= 10;
                OP_HEIGHT  	= 20;
                OP_DEL     	= 30;
                OP_GET     	= 40;
                OP_PUT     	= 50;
                OP_GETKEYS	= 60;
                OP_GETVALUES	= 70;
                OP_VERIFY       = 80;
                OP_ERROR   	= 99;
        }
        Opcode opcode = 1;

        enum C_type {
                CT_BAD    	= 0;
                CT_KEY    	= 10;
                CT_VALUE  	= 20;
                CT_ENTRY  	= 30;
                CT_KEYS   	= 40;
                CT_VALUES  	= 50;
                CT_RESULT 	= 60;
                CT_NONE   	= 70;
        }
        C_type c_type = 2;
        entry_t entry = 3;
        data_t data = 4;
        int32 size_height = 5;
        repeated bytes keys = 6;
        repeated bytes values = 7;
        string key = 8;
        int32 verify = 9;
};

message entry_t
 {
        string key = 1;
        data_t value = 2;
 };

message data_t
 {
        int32 datasize = 1;
        string data = 2;
 };